2nd commit reviews are working

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.12.0",
     "@types/ws": "^8.18.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.6",
     "googleapis": "^153.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
